samples/_failures_safe/1761656597_2b14c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d49b852a.c: In function ‘main’:
./samples/SAFE/__tmp_d49b852a.c:172: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_d49b852a.c:171:5: error: expected declaration or statement at end of input
  171 |     if
      |     ^~
